Fix system-user not using correct client
VEO-1012